syntax = "proto3";

package analytics;

option go_package = "github.com/Varun5711/shorternit/proto/analytics";


service AnalyticsService {
  rpc TrackClick(TrackClickRequest) returns (TrackClickResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
  rpc GetTimeSeries(GetTimeSeriesRequest) returns (GetTimeSeriesResponse);
  rpc GetGeoStats(GetGeoStatsRequest) returns (GetGeoStatsResponse);
}

message TrackClickRequest {
  string short_code = 1;
  string ip_address = 2;
  string user_agent = 3;
  string referer = 4;
  int64 timestamp = 5;
}

message TrackClickResponse {
  bool success = 1;
  string click_id = 2;
}

message GetStatsRequest {
  string short_code = 1;
  int64 start_time = 2;
  int64 end_time = 3;
}

message GetStatsResponse {
  string short_code = 1;
  int64 total_clicks = 2;
  int64 unique_visitors = 3;
  repeated CountryStat countries = 4;
  repeated RefererStat referrers = 5;
  DeviceStats device_stats = 6;
}

message CountryStat {
  string country_code = 1;  
  string country_name = 2;  
  int64 click_count = 3;
  float percentage = 4;      
}

message RefererStat {
  string referer = 1;        
  int64 click_count = 2;
  float percentage = 3;
}

message DeviceStats {
  int64 mobile = 1;
  int64 desktop = 2;
  int64 tablet = 3;
  int64 other = 4;
}

message GetTimeSeriesRequest {
  string short_code = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  string granularity = 4;
}

message GetTimeSeriesResponse {
  repeated TimeSeriesPoint points = 1;
}

message TimeSeriesPoint {
  int64 timestamp = 1;
  int64 clicks = 2;
  int64 unique_visitors = 3;
}

message GetGeoStatsRequest {
  string short_code = 1;
  int32 limit = 2;
}

message GetGeoStatsResponse {
  repeated CountryStat countries = 1;
  repeated CityStat cities = 2;
}

message CityStat {
  string city = 1;
  string country_code = 2;
  int64 click_count = 3;
  float percentage = 4;
}
