syntax = "proto3";

package url;

// This tells protoc where to generate the Go code
// It will create: github.com/Varun5711/shorternit/proto/url
option go_package = "github.com/Varun5711/shorternit/proto/url";

// URLService is the gRPC service definition
// This is like a NestJS Controller - it defines the API contract
//
// The API Gateway will be a CLIENT of this service (calls these methods)
// The URL Service will be a SERVER of this service (implements these methods)
service URLService {
  // CreateURL generates a new short URL
  // Like: @Post('/urls') in NestJS
  rpc CreateURL(CreateURLRequest) returns (CreateURLResponse);

  // GetURL retrieves a URL by its short code
  // Like: @Get('/urls/:code') in NestJS
  rpc GetURL(GetURLRequest) returns (GetURLResponse);

  // ListURLs returns all URLs (paginated)
  // Like: @Get('/urls') in NestJS
  rpc ListURLs(ListURLsRequest) returns (ListURLsResponse);

  // DeleteURL soft-deletes a URL
  // Like: @Delete('/urls/:code') in NestJS
  rpc DeleteURL(DeleteURLRequest) returns (DeleteURLResponse);

  // IncrementClicks updates the click count
  // This is called internally (not exposed via REST)
  rpc IncrementClicks(IncrementClicksRequest) returns (IncrementClicksResponse);

  // CreateCustomURL creates a URL with a custom alias
  // Like: @Post('/urls/custom') in NestJS
  rpc CreateCustomURL(CreateCustomURLRequest) returns (CreateCustomURLResponse);
}

// ==================== CREATE URL ====================

message CreateURLRequest {
  // The original long URL to shorten
  // Field numbers (1, 2, 3...) are used for binary encoding
  // NEVER change these numbers after deployment!
  string long_url = 1;

  // Optional: User ID (for authenticated requests)
  string user_id = 2;

  // Optional: Custom alias (like bit.ly/my-custom-name)
  // string custom_alias = 3;  // Uncomment for custom URLs feature

  // Optional: Expiration timestamp (Unix seconds, 0 = never expires)
  int64 expires_at = 4;
}

message CreateURLResponse {
  // The generated short code (e.g., "abc123")
  string short_code = 1;

  // The full short URL (e.g., "http://short.ly/abc123")
  string short_url = 2;

  // The original long URL (echo back for confirmation)
  string long_url = 3;

  // When this URL was created (Unix timestamp in seconds)
  int64 created_at = 4;

  // When this URL expires (Unix timestamp in seconds, 0 = never expires)
  int64 expires_at = 5;

  // QR code as base64 data URI (e.g., "data:image/png;base64,...")
  string qr_code = 6;
}

// ==================== GET URL ====================

message GetURLRequest {
  // The short code to lookup
  string short_code = 1;
}

message GetURLResponse {
  // The URL object (will be nil if not found)
  URL url = 1;

  // Whether the URL was found
  bool found = 2;
}

// ==================== LIST URLs ====================

message ListURLsRequest {
  // Pagination: how many to return (default: 100, max: 1000)
  int32 limit = 1;

  // Pagination: offset for next page
  int32 offset = 2;

  // Optional: Filter by user ID
  string user_id = 3;
}

message ListURLsResponse {
  // Array of URLs
  repeated URL urls = 1;

  // Total count (for pagination)
  int32 total = 2;

  // Whether there are more results
  bool has_more = 3;
}

// ==================== DELETE URL ====================

message DeleteURLRequest {
  string short_code = 1;
}

message DeleteURLResponse {
  bool success = 1;
}

// ==================== INCREMENT CLICKS ====================

message IncrementClicksRequest {
  string short_code = 1;
}

message IncrementClicksResponse {
  // The new click count
  int64 clicks = 1;
}

// ==================== CREATE CUSTOM URL ====================

message CreateCustomURLRequest {
  // The custom alias/slug (e.g., "my-brand")
  string alias = 1;

  // The original long URL to shorten
  string long_url = 2;

  // Optional: Expiration timestamp (Unix seconds, 0 = never expires)
  int64 expires_at = 3;

  // Optional: User ID (for authenticated requests)
  string user_id = 4;
}

message CreateCustomURLResponse {
  // The custom alias (same as request)
  string short_code = 1;

  // The full short URL (e.g., "http://short.ly/my-brand")
  string short_url = 2;

  // The original long URL (echo back for confirmation)
  string long_url = 3;

  // When this URL was created (Unix timestamp in seconds)
  int64 created_at = 4;

  // When this URL expires (Unix timestamp in seconds, 0 = never expires)
  int64 expires_at = 5;

  // QR code as base64 data URI (e.g., "data:image/png;base64,...")
  string qr_code = 6;
}

// ==================== SHARED MESSAGES ====================

// URL represents a shortened URL
// This is like your DTO/Entity in NestJS
message URL {
  // The short code (Base62 encoded ID)
  string short_code = 1;

  // The original long URL
  string long_url = 2;

  // Number of times this URL has been clicked
  int64 clicks = 3;

  // When this URL was created (Unix timestamp in seconds)
  int64 created_at = 4;

  // When this URL was last updated
  int64 updated_at = 5;

  // Whether this URL is active (soft delete)
  bool is_active = 6;

  // Optional: When this URL expires (Unix timestamp, 0 = never expires)
  int64 expires_at = 7;

  // The full short URL (e.g., "http://short.ly/abc123")
  string short_url = 8;
}
